@@ -1,3 +1,7 @@
+[B]Version 2.0.3 - 2012-12-28[/B]
+- Fixed addon on Frodo
+- Fixed parsing of duration
+
 [B]Version 2.0.2 - 2012-08-27[/B]
 - Now using script.module.buggalo
 - Improve error handling of communication issues
